--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
 			<version>0.1.1-SNAPSHOT</version>
 		</dependency>
 
-
 		<!-- Log4j -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -42,9 +41,9 @@
 
 		<!-- JOCL -->
 		<dependency>
-			<groupId>org.jocl</groupId>
-			<artifactId>jocl</artifactId>
-			<version>2.0.0</version>
+			<groupId>org.jogamp.jocl</groupId>
+			<artifactId>jocl-main</artifactId>
+			<version>2.3.1</version>
 		</dependency>
 
 	</dependencies>
